Added some text

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Centered Content</title>
   <link rel="stylesheet" href="styles/layout.css">
+  <link rel="stylesheet" href="styles/fonts.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Enter the era of virtual brains</h1>
-    <p>AI Intergration on a subscription basis</p>
+  <div class="main-container">
+    <h1>Welcome, CEOs.</h1>
+    <p>Subscription-based AI for faster, leaner, and more intelligent business processes.</p>
+    <hr>
+    <h2>Getting started</h2>
+    <p>Skip the long-term commitment. Our subscription model gives you flexible, on-demand AI integration without the hassle of internal hires or long-term investments. We deliver exactly what you need, for as long as you need it.</p>
   </div>
 </body>
 </html>
+
